--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -26,6 +26,10 @@ header.centered-navigation {
     height: $centered-navigation-height-big;
   }
 
+  @media(max-width: 1100px) {
+    max-height: $centered-navigation-height-small;
+  }
+  
   .logo img {
     position: relative;
     margin-bottom: -$centered-navigation-logo-height-small / 3;
