--- a/app/assets/stylesheets/service.scss
+++ b/app/assets/stylesheets/service.scss
@@ -8,13 +8,12 @@ section.service {
     $tab-content-background: lighten($tab-border-color, 10);
     $tab-active-color: $tab-content-background;
     $tab-inactive-color: $base-background-color;
-    $vertical-tabs-height: em(750);
+    $vertical-tabs-height: em(440);
     $vertical-tab-mode: $medium-screen;
 
     @include clearfix;
     border-radius: $tab-border-radius;
     border: $tab-border;
-    margin-bottom: $base-spacing;
     overflow: hidden;
 
     .vertical-tabs {
@@ -25,7 +24,7 @@ section.service {
         display: inline;
         float: left;
         height: $vertical-tabs-height;
-        width: 40%;
+        width: 45%;
       }
     }
 
@@ -58,14 +57,14 @@ section.service {
 
       @include media($vertical-tab-mode) {
         @include inline-block;
-        @include size(60% $vertical-tabs-height);
+        @include size(55% $vertical-tabs-height);
         background-color: $tab-content-background;
       }
     }
 
     .vertical-tab-content {
       background-color: $tab-content-background;
-      font-size: 1.3em;
+      font-size: 1.17em;
       padding: $base-spacing $gutter;
 
       @include media($vertical-tab-mode) {
